<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_page"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:text="@string/login_page"
        android:textAppearance="@style/login_page"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/login_to_co"
        android:layout_width="205dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="89dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="153dp"
        android:text="@string/login_to_co"
        android:textAppearance="@style/login_to_co"
        android:gravity="top"
        />

    <ImageView
        android:id="@+id/carbon_user"
        android:layout_width="98dp"
        android:layout_height="97dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="133dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="193dp"
        android:clipToOutline="true"
        android:src="@drawable/profile"
        />
    <TextView
        android:id="@+id/user"
        android:layout_width="53dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="158dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:text="@string/user"
        android:textAppearance="@style/user"
        android:gravity="top"
        />
    <EditText
        android:id="@+id/rectangle_2"
        android:layout_width="227dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="78dp"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:hint="Enter Username"
        android:layout_marginTop="376dp"
        android:background="@drawable/rectangle_2"
        />

    <EditText
        android:id="@+id/rectangle_3"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="78dp"
        android:layout_alignParentTop="true"
        android:hint="Enter Password"
        android:padding="10dp"
        android:layout_marginTop="441dp"
        android:background="@drawable/rectangle_2"
        />

    <View
        android:id="@+id/signin"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="124dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="538dp"
        android:background="@drawable/rectangle_4"
        />
    <TextView
        android:id="@+id/sign_in"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="143dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="546dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:gravity="top"
        />

</RelativeLayout>